<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FLIR ONE Example Application</string>
    <string name="change_view">Change View \u21EA</string>
    <string name="change_view_retract">Change View \u21B2</string>
    <string name="connectSim">Toggle Sim</string>
    <string name="performTuning">Tune</string>
    <string name="rotate_on">\u21BA</string>
    <string name="rotate_off">\u21BB</string>
    <string name="battery_label">Batt:</string>
    <string name="txtTuning">Tuning...</string>
    <string name="startNetStream">Stream</string>
    <string name="stopNetStream">Disconnect</string>
    <string name="normal">Normal</string>
    <string name="vivid">Vivid</string>
    <string name="test_thermal_tv_thermal_text" translatable="false">拍照</string>
    <string name="test_testhistory_tv_sort_text" translatable="false">删除</string>
    <string name="test_temporary_bt_preservation_text" translatable="false">确定</string>
    <string name="thermal_glpreview_line_name_text" translatable="false">热成像</string>
    <string name="thermal_glpreview_progress_text">正在初始化，请稍后....</string>
    <string name="thermal_glpreview_toast_support_text">此设备不支持红外热成像</string>
</resources>
