<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="false"
    tools:context=".GLPreviewActivity">


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <android.opengl.GLSurfaceView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|top"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <FrameLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/theme">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/line_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/thermal_glpreview_line_name_text"
                android:textColor="@color/title_name"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/fullscreen_content_controls_top"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/batteryLabelTextView"
                style="?actionMenuTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:text="@string/battery_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/batteryChargeIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0"
                android:src="@android:drawable/ic_lock_idle_charging"
                android:tint="@color/accent_material_light"
                android:visibility="gone" />

            <TextView
                android:id="@+id/batteryLevelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="0.48"
                android:text="--"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ToggleButton
                android:id="@+id/chargeCableToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:checked="false"
                android:onClick="onSimulatedChargeCableToggleClicked"
                android:text="Cable"
                android:visibility="invisible" />

            <ToggleButton
                android:id="@+id/vividButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onVividClicked"
                android:textOff="@string/normal"
                android:textOn="@string/vivid" />

            <Button
                android:id="@+id/tuneButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:onClick="onTuneClicked"
                android:text="@string/performTuning" />

            <ToggleButton
                android:id="@+id/switch_rotate"
                style="?metaButtonBarButtonStyle"
                android:layout_width="47dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="onRotateClicked"
                android:text="@string/rotate_on"
                android:textOff="@string/rotate_off"
                android:textOn="@string/rotate_on" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_photo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/theme">

            <ImageView
                android:id="@+id/img_thermal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/btn_add_photo"
                android:scaleType="center" />

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginLeft="83dp"-->
                <!--android:background="@drawable/ic_photo_white" />-->
            <View
                android:background="#fff"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <TextView
                android:onClick="onCaptureImageClicked"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tv_thermal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:includeFontPadding="false"
                android:text="@string/test_thermal_tv_thermal_text"
                android:textColor="#fff"
                android:textSize="22sp" />

            <View
                android:background="#fff"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <TextView
                android:onClick="onComplete"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/tv_complete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:includeFontPadding="false"
                android:text="完成"
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:columnCount="3"
            android:rowCount="2"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/imageTypeListContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:baselineAligned="false"
                android:focusableInTouchMode="false"
                android:orientation="horizontal"
                android:visibility="gone">

                <ListView
                    android:id="@+id/imageTypeListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|bottom|left"
                    android:layout_marginBottom="60dp"
                    android:layout_weight="0.25"
                    android:alpha="0.9"
                    android:choiceMode="singleChoice"
                    android:clickable="true"
                    android:dividerHeight="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ListView
                    android:id="@+id/paletteListView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="60dp"
                    android:layout_weight="0.75"
                    android:alpha="0.9"
                    android:choiceMode="singleChoice"
                    android:clickable="true"
                    android:dividerHeight="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imageButton"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_weight="0.33"
                android:onClick="onCaptureImageClicked"
                android:src="@android:drawable/ic_menu_camera" />

            <ToggleButton
                android:id="@+id/change_view_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_weight="0.33"
                android:onClick="onChangeViewClicked"
                android:textOff="@string/change_view"
                android:textOn="@string/change_view_retract" />

            <Button
                android:id="@+id/connect_sim_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom|right"
                android:onClick="onConnectSimClicked"
                android:text="@string/connectSim" />


        </FrameLayout>

        <ProgressBar
            android:id="@+id/tuningProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tuningTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:labelFor="@id/tuningProgressBar"
            android:text="@string/txtTuning"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pleaseConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:text="Please Connect FLIR One"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/spotMeterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:src="@android:drawable/ic_menu_mylocation" />

        <TextView
            android:id="@+id/spotMeterValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.9"
            android:paddingTop="39dp"
            android:shadowColor="#191970"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_count"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

    </LinearLayout>
</RelativeLayout>
